--- a/css/style.css
+++ b/css/style.css
@@ -223,13 +223,15 @@ body {
 
 .hamburger-checkbox:checked ~ .sidebar {
   width: auto;
-  min-height: 100vh;
   padding-top: 6.5em;
 }
 @media screen and (min-width: 768px) {
   .hamburger-checkbox:checked ~ .sidebar {
     min-width: 100vw;
     height: auto;
+    height: 0rem;
+    padding-bottom: 3em;
+    padding-top: 0;
   }
 }
 .hamburger-checkbox:checked ~ .sidebar .menu {
