--- a/css/style.css
+++ b/css/style.css
@@ -155,11 +155,6 @@ nav {
   box-sizing: border-box;
 }
 
-html,
-body {
-  background: red;
-}
-
 .ie-fix {
   background: yellow;
 }
@@ -201,6 +196,12 @@ body {
   text-align: center;
   color: #eee;
 }
+@media screen and (min-width: 768px) {
+  .hamburger-checkbox:checked ~ .hamburger-label:before {
+    color: #444;
+    background-color: beige;
+  }
+}
 
 .content {
   flex: 1;
@@ -211,6 +212,12 @@ body {
   transition: all 0.3s;
   min-height: 100vh;
 }
+@media screen and (min-width: 768px) {
+  .content {
+    background: #eee;
+    color: #444;
+  }
+}
 
 .sidebar {
   overflow: hidden;
@@ -220,10 +227,17 @@ body {
   transition: all 0.3s;
   display: flex;
 }
+@media screen and (min-width: 768px) {
+  .sidebar {
+    background: #444;
+    color: #eee;
+  }
+}
 
 .hamburger-checkbox:checked ~ .sidebar {
   width: auto;
   padding-top: 6.5em;
+  color: #444;
 }
 @media screen and (min-width: 768px) {
   .hamburger-checkbox:checked ~ .sidebar {
