--- a/css/style.css
+++ b/css/style.css
@@ -1,311 +1,125 @@
-@import url("https://fonts.googleapis.com/css?family=Open+Sans:300");
-@import url("https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css");
-* {
-  /* remember to define focus styles! */
-  /* tables still need 'cellspacing="0"' in the markup */
-}
-* html,
-* body,
-* div,
-* span,
-* applet,
-* object,
-* iframe,
-* h1,
-* h2,
-* h3,
-* h4,
-* h5,
-* h6,
-* p,
-* blockquote,
-* pre,
-* a,
-* abbr,
-* acronym,
-* address,
-* big,
-* cite,
-* code,
-* del,
-* dfn,
-* em,
-* font,
-* img,
-* ins,
-* kbd,
-* q,
-* s,
-* samp,
-* small,
-* strike,
-* strong,
-* sub,
-* sup,
-* tt,
-* var,
-* dl,
-* dt,
-* dd,
-* ol,
-* ul,
-* li,
-* fieldset,
-* form,
-* label,
-* legend,
-* table,
-* caption,
-* tbody,
-* tfoot,
-* thead,
-* tr,
-* th,
-* td {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  outline: 0;
-  font-weight: inherit;
-  font-style: inherit;
-  font-size: 100%;
-  font-family: inherit;
-  vertical-align: baseline;
-}
-* :focus {
-  outline: 0;
-}
-* body {
-  line-height: 1;
-  color: black;
-  background: white;
-}
-* ol,
-* ul {
-  list-style: none;
-}
-* table {
-  border-collapse: separate;
-  border-spacing: 0;
-}
-* caption,
-* th,
-* td {
-  text-align: left;
-  font-weight: normal;
-}
-* blockquote:before,
-* blockquote:after,
-* q:before,
-* q:after {
-  content: "";
-}
-* blockquote,
-* q {
-  quotes: "" "";
-}
-
-body {
-  background-color: beige;
-}
-
-body {
-  display: grid;
-  grid-template-areas: " header " " main " " footer ";
-  font-family: "Times New Roman", Times, serif;
-  row-gap: 20px;
-  grid-template-rows: 10rem auto 2rem;
-  grid-template-columns: auto;
-  height: 100vh;
-}
-@media screen and (min-width: 768px) {
-  body {
-    grid-template-columns: auto 1240px auto;
-    grid-template-areas: ". header ." ". main ." ". footer .";
-  }
-}
-
-header {
-  grid-area: header;
-  border: 2px solid black;
-}
-@media screen and (min-width: 768px) {
-  header {
-    display: grid;
-    grid-template-rows: 5rem 5rem;
-    grid-template-areas: " . " " nav ";
-  }
-}
-
-main {
-  grid-area: main;
-}
-
-footer {
-  grid-area: footer;
-}
-
-nav {
-  grid-area: nav;
-}
-
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
-.ie-fix {
-  background: yellow;
-}
-
-.wrapper {
-  background: green;
-  display: flex;
-}
-
-.hamburger-checkbox {
-  position: absolute;
-  opacity: 0;
-}
-
-.hamburger-label {
-  position: absolute;
-  top: 32px;
-  left: 32px;
-  z-index: 1;
-  display: block;
-  width: 42px;
-  height: 42px;
-  font: 42px/42px fontawesome;
-  text-align: center;
-  color: #444;
-  cursor: pointer;
-}
-
-.hamburger-checkbox:checked ~ .hamburger-label:before {
-  content: "\f00d";
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: 1;
-  display: block;
-  width: 42px;
-  height: 42px;
-  font: 42px/42px fontawesome;
-  text-align: center;
-  color: #eee;
-}
-@media screen and (min-width: 768px) {
-  .hamburger-checkbox:checked ~ .hamburger-label:before {
-    color: #444;
-    background-color: beige;
-  }
-}
-
-.content {
-  flex: 1;
-  padding: 64px 32px;
-  background: #eee;
-  color: #444;
-  box-shadow: 0 0 5px rgb(0, 0, 0);
-  transition: all 0.3s;
-  min-height: 100vh;
-}
-@media screen and (min-width: 768px) {
-  .content {
-    background: #eee;
-    color: #444;
-  }
-}
-
-.sidebar {
+/* Add a black background color to the top navigation */
+.topnav {
+  background-color: #333;
   overflow: hidden;
-  width: 0;
-  background: #444;
-  color: #eee;
-  transition: all 0.3s;
   display: flex;
-}
-@media screen and (min-width: 768px) {
-  .sidebar {
-    background: #444;
-    color: #eee;
-  }
+  justify-content: space-between;
 }
 
-.hamburger-checkbox:checked ~ .sidebar {
-  width: auto;
-  padding-top: 6.5em;
-  color: #444;
-}
-@media screen and (min-width: 768px) {
-  .hamburger-checkbox:checked ~ .sidebar {
-    min-width: 100vw;
-    height: auto;
-    height: 0rem;
-    padding-bottom: 3em;
-    padding-top: 0;
-  }
-}
-.hamburger-checkbox:checked ~ .sidebar .menu {
-  list-style: none;
-  display: flex;
-  flex-direction: column;
-}
-@media screen and (min-width: 768px) {
-  .hamburger-checkbox:checked ~ .sidebar .menu {
-    flex-direction: row;
-  }
-}
-.hamburger-checkbox:checked ~ .sidebar .menu li {
-  display: flex;
-  align-items: center;
-  flex: 1 0 auto;
-  padding: 16px 32px;
-  border-top: 1px solid #2b2b2b;
-}
-@media screen and (min-width: 768px) {
-  .hamburger-checkbox:checked ~ .sidebar .menu li {
-    align-self: flex-start;
-  }
-}
-.hamburger-checkbox:checked ~ .sidebar .menu li:last-child {
-  border-bottom: 1px solid #2b2b2b;
+/* Style the links inside the navigation bar */
+.topnav a {
+  float: left;
+  display: block;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
 }
 
-/* Decorative styles unrelated to the demo */
-body {
-  font-family: "Open Sans", sans-serif;
+/* Add an active class to highlight the current page */
+.active {
+  background-color: #04aa6d;
+  color: white;
 }
 
-h1 {
-  margin: 32px 0;
-  font-weight: 300;
-  font-size: 200%;
-}
-
-p {
-  margin: 0 0 16px 0;
-}
-
-a {
-  color: #39b54a;
-}
-
-.sous {
-  list-style: none;
-  display: flex;
-  flex-direction: column;
+/* Hide the link that should open and close the topnav on small screens */
+.topnav .icon {
   display: none;
-  background-color: #444;
 }
 
-.sous:hover {
-  display: flex;
-  flex-direction: column;
+/* Dropdown container - needed to position the dropdown content */
+.dropdown {
+  float: left;
+  overflow: hidden;
 }
 
-li > a {
-  color: red;
+/* Style the dropdown button to fit inside the topnav */
+.dropdown .dropbtn {
+  font-size: 17px;
+  border: none;
+  outline: none;
+  color: white;
+  padding: 14px 16px;
+  background-color: inherit;
+  font-family: inherit;
+  margin: 0;
+}
+
+/* Style the dropdown content (hidden by default) */
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+}
+
+/* Style the links inside the dropdown */
+.dropdown-content a {
+  float: none;
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+}
+
+/* Add a dark background on topnav links and the dropdown button on hover */
+.topnav a:hover,
+.dropdown:hover .dropbtn {
+  background-color: #555;
+  color: white;
+}
+
+/* Add a grey background to dropdown links on hover */
+.dropdown-content a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+/* Show the dropdown menu when the user moves the mouse over the dropdown button */
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+/* When the screen is less than 600 pixels wide, hide all links, except for the first one ("Home"). Show the link that contains should open and close the topnav (.icon) */
+@media screen and (max-width: 600px) {
+  .topnav a:not(:first-child),
+  .dropdown .dropbtn {
+    display: none;
+  }
+  .topnav a.icon {
+    float: right;
+    display: block;
+  }
+}
+/* The "responsive" class is added to the topnav with JavaScript when the user clicks on the icon. This class makes the topnav look good on small screens (display the links vertically instead of horizontally) */
+@media screen and (max-width: 600px) {
+  .topnav.responsive {
+    position: relative;
+    display: block;
+  }
+  .topnav.responsive a.icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  .topnav.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+  .topnav.responsive .dropdown {
+    float: none;
+  }
+  .topnav.responsive .dropdown-content {
+    position: relative;
+  }
+  .topnav.responsive .dropdown .dropbtn {
+    display: block;
+    width: 100%;
+    text-align: left;
+  }
 }/*# sourceMappingURL=style.css.map */
