--- a/css/style.css
+++ b/css/style.css
@@ -171,4 +171,20 @@
 /* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
 .show {
   display: block;
+}
+
+.topnav .dropbtn {
+  float: left;
+  display: block;
+  color: #f2f2f2;
+  text-align: center;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+@media screen and (max-width: 600px) {
+  .topnav .dropbtn {
+    display: block;
+    float: none;
+  }
 }/*# sourceMappingURL=style.css.map */
