--- a/css/style.scss
+++ b/css/style.scss
@@ -420,3 +420,21 @@
 .show {
   display: block;
 }
+
+.topnav .dropbtn {
+  float: left;
+  display: block;
+  // display: none;
+  color: #f2f2f2;
+  text-align: center;
+  // padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+@media screen and (max-width: 600px) {
+  .topnav .dropbtn {
+    display: block;
+    float: none;
+  }
+}
