ajout de min-height 100vh au topnav responsive en commentaire non probant

--- a/css/style.scss
+++ b/css/style.scss
@@ -347,6 +347,7 @@
   .topnav.responsive {
     position: relative;
     display: block;
+    // min-height:100vh;
   }
   .topnav.responsive a.icon {
     position: absolute;
