--- a/css/style.css
+++ b/css/style.css
@@ -209,6 +209,11 @@
   width: 380px;
   -webkit-mask: linear-gradient(90deg, rgba(0, 0, 0, 0), #000 10% 90%, rgba(0, 0, 0, 0));
 }
+@media screen and (min-width: 768px) {
+  .gallery {
+    width: 700px;
+  }
+}
 
 .gallery > img {
   grid-area: 1/1;
