--- a/css/style.css
+++ b/css/style.css
@@ -247,4 +247,29 @@
   80.01% {
     transform: translate(100%);
   }
+}
+.logo-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0;
+}
+
+.logo-container > img:first-child {
+  border-right: 3px solid black;
+}
+
+.logo-container > img:last-child {
+  padding-left: 10px;
+}
+
+.logo-container > img {
+  height: 25%;
+  width: 25%;
+}
+@media screen and (min-width: 768px) {
+  .logo-container > img {
+    width: 10%;
+    height: 10%;
+  }
 }/*# sourceMappingURL=style.css.map */
