--- a/css/style.scss
+++ b/css/style.scss
@@ -316,10 +316,32 @@ $n: 5; /* number of images*/
   }
 }
 
-// body {
-//   margin: 0;
-//   min-height: 100vh;
-//   display: grid;
-//   place-content: center;
-//   background: #ecd078;
-// }
+body {
+  //   margin: 0;
+  //   min-height: 100vh;
+  //   display: grid;
+  //   place-content: center;
+  //   background: #ecd078;
+}
+
+.logo-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0;
+}
+.logo-container > img:first-child {
+  border-right: 3px solid black;
+}
+.logo-container > img:last-child {
+  padding-left: 10px;
+}
+
+.logo-container > img {
+  height: 25%;
+  width: 25%;
+  @include media(tablet) {
+    width: 10%;
+    height: 10%;
+  }
+}
