--- a/css/style.scss
+++ b/css/style.scss
@@ -1,8 +1,8 @@
 @import "./mixinsandfunctions.scss";
 
-// * {
-//   @include reset;
-// }
+* {
+  @include reset;
+}
 // body {
 //   background-color: beige;
 // }
@@ -290,6 +290,8 @@ $n: 5; /* number of images*/
   display: grid;
   overflow: hidden;
   width: 380px;
+  padding-top: 20px;
+  place-content: center;
   @include media(tablet) {
     width: 700px;
   }
@@ -316,13 +318,14 @@ $n: 5; /* number of images*/
   }
 }
 
-body {
-  //   margin: 0;
-  //   min-height: 100vh;
-  //   display: grid;
-  //   place-content: center;
-  //   background: #ecd078;
-}
+// .gallery{
+//   //   margin: 0;
+//   //   min-height: 100vh;
+//   //   display: grid;
+//   //   place-content: center;
+//   //   background: #ecd078;
+//   padding: 0;
+// }
 
 .logo-container {
   display: flex;
