--- a/css/style.css
+++ b/css/style.css
@@ -313,7 +313,7 @@
   overflow: hidden;
   width: 380px;
   padding-top: 20px;
-  place-content: center;
+  place-self: center;
   -webkit-mask: linear-gradient(90deg, rgba(0, 0, 0, 0), #000 10% 90%, rgba(0, 0, 0, 0));
 }
 @media screen and (min-width: 768px) {
@@ -376,7 +376,13 @@
 }
 @media screen and (min-width: 768px) {
   .logo-container > img {
-    width: 10%;
-    height: 10%;
+    width: 5%;
+    height: 5%;
   }
+}
+
+.gallery-container {
+  margin: 0;
+  display: grid;
+  place-content: center;
 }/*# sourceMappingURL=style.css.map */
