--- a/css/style.scss
+++ b/css/style.scss
@@ -291,7 +291,7 @@ $n: 5; /* number of images*/
   overflow: hidden;
   width: 380px;
   padding-top: 20px;
-  place-content: center;
+  place-self: center;
   @include media(tablet) {
     width: 700px;
   }
@@ -344,7 +344,15 @@ $n: 5; /* number of images*/
   height: 25%;
   width: 25%;
   @include media(tablet) {
-    width: 10%;
-    height: 10%;
+    width: 5%;
+    height: 5%;
   }
+}
+
+.gallery-container {
+  margin: 0;
+  // min-height: 100vh;
+  display: grid;
+  place-content: center;
+  // background: #ecd078;
 }
