ajout essai couleur bleue topnav responsive

--- a/css/style.scss
+++ b/css/style.scss
@@ -63,10 +63,14 @@
 
 /* Add a black background color to the top navigation */
 .topnav {
-  background-color: #333;
+  // background-color: #333;
   overflow: hidden;
   display: flex;
   justify-content: space-between;
+  // background-color: #0069B6;
+  /* background-color: #0069B6; */
+  // background-color: #2D2F8C;
+  background-color: #0058a9;
 }
 
 /* Style the links inside the navigation bar */
