--- a/css/style.css
+++ b/css/style.css
@@ -105,10 +105,11 @@
 
 /* Add a black background color to the top navigation */
 .topnav {
-  background-color: #333;
   overflow: hidden;
   display: flex;
   justify-content: space-between;
+  /* background-color: #0069B6; */
+  background-color: #0058a9;
 }
 
 /* Style the links inside the navigation bar */
