topnav responsive height:100vh essai

--- a/css/style.scss
+++ b/css/style.scss
@@ -168,6 +168,8 @@
   .topnav.responsive {
     position: relative;
     display: block;
+    height: 100vh;
+
     // min-height:100vh;
   }
   .topnav.responsive a.icon {
