--- a/css/style.css
+++ b/css/style.css
@@ -206,6 +206,7 @@
   .topnav.responsive {
     position: relative;
     display: block;
+    height: 100vh;
   }
   .topnav.responsive a.icon {
     position: absolute;
