--- a/css/style.css
+++ b/css/style.css
@@ -110,6 +110,7 @@
   justify-content: space-between;
   /* background-color: #0069B6; */
   background-color: #0058a9;
+  height:50px;
 }
 
 /* Style the links inside the navigation bar */
@@ -387,4 +388,58 @@
   margin: 0;
   display: grid;
   place-content: center;
+}
+
+.dropbtn3 {
+  background-color: #4caf50;
+  color: white;
+  padding: 16px;
+  font-size: 16px;
+  border: none;
+  cursor: pointer;
+}
+
+/* The container <div> - needed to position the dropdown content */
+.dropdown3 {
+  position: relative;
+  display: inline-block;
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content3 {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 10000;
+}
+
+/* Links inside the dropdown */
+.dropdown-content3 a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+/* Change color of dropdown links on hover */
+.dropdown-content3 a:hover {
+  background-color: #f1f1f1;
+}
+
+/* Show the dropdown menu on hover */
+.dropdown3:hover .dropdown-content3 {
+  /* display: block; */
+  /* height: 700px; */
+  background-color: red;
+  position: relatiue;
+  /* position: relative; */
+  display: flex;
+  flex-direction: column;
+}
+
+/* Change the background color of the dropdown button when the dropdown content is shown */
+.dropdown3:hover .dropbtn3 {
+  background-color: #3e8e41;
 }/*# sourceMappingURL=style.css.map */
