on est bon pour le responsive avec  margin-bottom pour décoller le logo en bas du menu

--- a/css/style.css
+++ b/css/style.css
@@ -110,7 +110,7 @@
   justify-content: space-between;
   /* background-color: #0069B6; */
   background-color: #0058a9;
-  height:50px;
+  margin-bottom: 20px;
 }
 
 /* Style the links inside the navigation bar */
@@ -404,12 +404,7 @@
   position: relative;
   display: inline-block;
 }
-@media screen and (max-width: 600px) {
-.dropdown3{
-  display: none;
-}
 
-}
 /* Dropdown Content (Hidden by Default) */
 .dropdown-content3 {
   display: none;
@@ -442,18 +437,20 @@
   /* position: relative; */
   display: flex;
   flex-direction: column;
-  position: fixed;
 }
 
 /* Change the background color of the dropdown button when the dropdown content is shown */
 .dropdown3:hover .dropbtn3 {
   background-color: #3e8e41;
-}/*# sourceMappingURL=style.css.map */
+}
 
-
-
+@media screen and (max-width: 600px) {
+  .dropdown3 {
+    display: none;
+  }
+}
 @media screen and (min-width: 600px) {
-.dropdown2 {
-  display: none;
-}
-}
+  .dropdown2 {
+    display: none;
+  }
+}/*# sourceMappingURL=style.css.map */
