ajout position fixed à dropdown3:hover

--- a/css/style.css
+++ b/css/style.css
@@ -437,6 +437,7 @@
   /* position: relative; */
   display: flex;
   flex-direction: column;
+  position: fixed;
 }
 
 /* Change the background color of the dropdown button when the dropdown content is shown */
