--- a/css/style.scss
+++ b/css/style.scss
@@ -467,6 +467,9 @@ main {
 
 footer {
   grid-area: footer;
+  color: white;
+  background-color: #000;
+  height: 5rem;
 }
 
 body {
@@ -478,7 +481,7 @@ body {
   grid-template-areas:
     " navbar "
     "main "
-    "footer ";
+    "footer";
   // font-family: Arial, Verdana, sans-serif;
   //   row-gap: 20px;
   grid-template-rows: auto 1fr auto;
@@ -494,7 +497,9 @@ body {
     grid-template-areas:
       " . navbar ."
       "  . main .  "
-      ". footer . ";
+      // ". footer . ";
+      "footer footer footer ";
+
     grid-template-columns: auto 1240px auto;
 
     padding: 0;
@@ -551,7 +556,8 @@ $n: 5; /* number of images*/
   display: flex;
   justify-content: center;
   align-items: center;
-  margin: 0;
+  // margin: 0;
+  // margin-top: 40px;
 }
 .logo-container > img:first-child {
   border-right: 3px solid black;
