--- a/css/style.css
+++ b/css/style.css
@@ -257,21 +257,14 @@ nav {
   width: 100%;
   margin: 0;
   padding: 0;
-  background: #4054b2;
+  background-color: #164f9d;
   background-size: 100% 100%;
   width: 100%;
   border-radius: 0px 0px 10px 10px;
-  -webkit-background-clip: border-box;
-}
-@media only screen and (min-width: 415px) {
-  nav {
-    background-image: linear-gradient(85deg, #352361 1%, rgb(64, 84, 178) 55%);
-  }
 }
 @media screen and (min-width: 1024px) {
   nav {
     width: 1240px;
-    background-image: linear-gradient(85deg, #352361 1%, rgb(64, 84, 178) 55%);
   }
 }
 
@@ -432,7 +425,7 @@ nav .wrapper {
     max-width: 350px;
     top: 0;
     left: -100%;
-    background: linear-gradient(85deg, #352361 1%, rgb(64, 84, 178) 55%);
+    background-color: #164f9d;
     display: block;
     padding: 50px 10px;
     line-height: 50px;
