--- a/css/style.scss
+++ b/css/style.scss
@@ -516,12 +516,12 @@ $n: 5; /* number of images*/
   display: grid;
   overflow: hidden;
   width: 380px;
-  padding-top: 20px;
+  padding-top: 90px;
   place-self: center;
   @include media(tablet) {
     width: 700px;
   }
-  -webkit-mask: linear-gradient(90deg, #0000, #000 10% 90%, #0000);
+  // -webkit-mask: linear-gradient(90deg, #0000, #000 10% 90%, #0000);
 }
 .gallery > img {
   grid-area: 1/1;
