--- a/css/style.scss
+++ b/css/style.scss
@@ -173,6 +173,7 @@ nav {
   background-size: 100% 100%;
   width: 100%;
   border-radius: 0px 0px 10px 10px;
+  // grid-area: nav;
   // @media only screen and (min-width: 415px) {
   //   // position: relative;
   //   // width: 1240px;
@@ -557,6 +558,7 @@ $n: 5; /* number of images*/
   display: flex;
   justify-content: center;
   align-items: center;
+  grid-area: logo;
   // margin: 0;
   // margin-top: 40px;
 }
@@ -568,90 +570,40 @@ $n: 5; /* number of images*/
 }
 
 .logo-container > img {
-  height: 15%;
-  width: 15%;
-  @include media(tablet) {
-    width: 5%;
-    height: 5%;
-  }
+  // height: 15%;
+  // width: 15%;
+  width: 70px;
+  height: 70px;
+  // @include media(tablet) {
+  //   width: 5%;
+  //   height: 5%;
+  // }
 }
 
 .gallery-container {
   margin: 0;
   // min-height: 100vh;
   display: grid;
-  place-content: center;
+  // place-content: center;
   // background: #ecd078;
-}
-
-.dropbtn3 {
-  background-color: #4caf50;
-  color: white;
-  padding: 16px;
-  font-size: 16px;
-  border: none;
-  cursor: pointer;
-}
-
-/* The container <div> - needed to position the dropdown content */
-.dropdown3 {
-  position: relative;
-  display: inline-block;
-}
-
-/* Dropdown Content (Hidden by Default) */
-.dropdown-content3 {
-  display: none;
-  position: absolute;
-  background-color: #f9f9f9;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-  z-index: 10000;
-}
-
-/* Links inside the dropdown */
-.dropdown-content3 a {
-  color: black;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
-}
-
-/* Change color of dropdown links on hover */
-.dropdown-content3 a:hover {
-  background-color: #f1f1f1;
-  // display: block;
-}
-
-/* Show the dropdown menu on hover */
-.dropdown3:hover .dropdown-content3 {
-  /* display: block; */
-  /* height: 700px; */
-  background-color: red;
-  position: relatiue;
-  /* position: relative; */
-  display: flex;
-  flex-direction: column;
-  position: fixed;
-}
-
-/* Change the background color of the dropdown button when the dropdown content is shown */
-.dropdown3:hover .dropbtn3 {
-  background-color: #3e8e41;
-}
-
-@media screen and (max-width: 600px) {
-  .dropdown3 {
-    display: none;
-  }
-}
-
-@media screen and (min-width: 600px) {
-  .dropdown2 {
-    display: none;
-  }
+  // grid-area: gallery;
+  grid-area: gallery;
 }
 
 .fa-house {
   font-family: fontawesome;
+}
+
+main {
+  display: grid;
+  grid-template-areas: ". ." "title logo" "gallery gallery";
+  grid-template-columns: auto;
+  grid-template-rows: auto;
+  // grid-template-columns: ;
+  // grid-template-rows: 1fr 1fr;
+}
+
+h1 {
+  grid-area: title;
+  font-size: 2rem;
 }
