suppression align-items center logo-container et h1 même ligne

--- a/css/style.scss
+++ b/css/style.scss
@@ -557,7 +557,7 @@ $n: 5; /* number of images*/
 .logo-container {
   display: flex;
   justify-content: center;
-  align-items: center;
+  // align-items: center;
   grid-area: logo;
   // margin: 0;
   // margin-top: 40px;
